Import of BEPPU/AnyEvent-CouchDB-1.01 from CPAN.
gitpan-cpan-distribution: AnyEvent-CouchDB
gitpan-cpan-version:      1.01
gitpan-cpan-path:         BEPPU/AnyEvent-CouchDB-1.01.tar.gz
gitpan-cpan-author:       BEPPU
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                AnyEvent-CouchDB
-version:             1.00
+version:             1.01
 abstract:            a non-blocking CouchDB client based on jquery.couch.js
 license:             mit
 author:              
@@ -12,6 +12,7 @@ requires:
     CouchDB::View:                 0
     Data::Dump:                    0
     Data::Dump::Streamer:          0
+    IO::All:                       0
     JSON::XS:                      0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
