--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,28 @@
 --- #YAML:1.0
-name:                AnyEvent-CouchDB
-version:             1.03
-abstract:            a non-blocking CouchDB client based on jquery.couch.js
-license:             mit
-author:              
+name:               AnyEvent-CouchDB
+version:            1.04
+abstract:           a non-blocking CouchDB client based on jquery.couch.js
+author:
     - John BEPPU <beppu@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    AnyEvent::HTTP:                1.03
-    CouchDB::View:                 0
-    Data::Dump:                    0
-    Data::Dump::Streamer:          0
-    IO::All:                       0
-    JSON::XS:                      0
+license:            mit
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    AnyEvent::HTTP:       1.03
+    CouchDB::View:        0
+    Data::Dump:           0
+    Data::Dump::Streamer:  0
+    IO::All:              0
+    JSON::XS:             0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
 no_index:
     directory:
         - eg
