--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               AnyEvent-CouchDB
-version:            1.20
+version:            1.21
 abstract:           a non-blocking CouchDB client based on jquery.couch.js
 author:
     - John BEPPU <beppu@cpan.org>
@@ -16,12 +16,13 @@ requires:
     Data::Dump::Streamer:  0
     IO::All:              0
     JSON::XS:             0
+    Scope::Guard:         0
 no_index:
     directory:
         - t
         - inc
         - eg
-generated_by:       ExtUtils::MakeMaker version 6.54
+generated_by:       ExtUtils::MakeMaker version 6.50
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
