--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,30 @@
---- #YAML:1.0
-name:               AnyEvent-CouchDB
-version:            1.24
-abstract:           a non-blocking CouchDB client based on jquery.couch.js
+---
+abstract: 'a non-blocking CouchDB client based on jquery.couch.js'
 author:
-    - John BEPPU <beppu@cpan.org>
-license:            mit
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'John BEPPU <beppu@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    AnyEvent::HTTP:       1.11
-    CouchDB::View:        0
-    Data::Dump::Streamer:  0
-    Exception::Class:     0
-    IO::All:              0
-    JSON:                 0
-    Scalar::Util:         0
-    Scope::Guard:         0
-no_index:
-    directory:
-        - t
-        - inc
-        - eg
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.5711, CPAN::Meta::Converter version 2.110580'
+license: mit
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: AnyEvent-CouchDB
+no_index:
+  directory:
+    - t
+    - inc
+    - eg
+requires:
+  AnyEvent::HTTP: 1.11
+  CouchDB::View: 0
+  Data::Dump::Streamer: 0
+  Exception::Class: 0
+  IO::All: 0
+  JSON: 0
+  Scalar::Util: 0
+  Scope::Guard: 0
+version: 1.25
